--- a/audiopyle/open_api_docs.yml
+++ b/audiopyle/open_api_docs.yml
@@ -26,11 +26,11 @@ definitions:
         type: string
         format: date-time
     required:
-      - file_name
-      - size
-      - created_on
-      - last_modification
-      - last_access
+    - file_name
+    - size
+    - created_on
+    - last_modification
+    - last_access
   AudioTag:
     type: object
     properties:
@@ -49,12 +49,12 @@ definitions:
         description: "Year of album release"
         type: integer
     required:
-      - artist
-      - album
-      - title
-      - genre
-      - track
-      - date
+    - artist
+    - album
+    - title
+    - genre
+    - track
+    - date
   MetricConfig:
     type: object
     additionalProperties:
@@ -71,8 +71,8 @@ definitions:
               type: object
               additionalProperties: true
       required:
-        - plugin
-        - transformation
+      - plugin
+      - transformation
   PluginConfig:
     type: object
     additionalProperties:
@@ -102,8 +102,24 @@ definitions:
         type: object
         nullable: true
     required:
-      - audio_file_name
-      - plugin_full_key
+    - audio_file_name
+    - plugin_full_key
+  VampPlugin:
+    type: object
+    properties:
+      vendor:
+        type: string
+      name:
+        type: string
+      output:
+        type: string
+      library_file_name:
+        type: string
+      required:
+      - vendor
+      - name
+      - output
+      - library_file_name
 paths:
   "/audio/":
     get:
@@ -170,25 +186,45 @@ paths:
           description: file_name parameter was not provided in URL
         404:
           description: Can not find a file with given name
-  "/request/automation":
-    post:
-      description: Creates Cartesian product of requests from list of audio files and available (non-blacklisted) VAMP plugins and sends them for execution
+  "/plugin":
+    get:
+      description: Returns list of available VAMP plugins
       responses:
-        202:
-          description: Returns details of generated requests
+        200:
+          description: List of available VAMP plugins
           schema:
             type: array
             items:
-              "$ref": "#/definitions/ExtractionRequest"
-          examples: [{
-                       "audio_file_name": "102bpm_drum_loop.flac",
-                       "metric_config": null,
-                       "plugin_config": null,
-                       "plugin_full_key": "vamp-example-plugins:spectralcentroid:logcentroid",
-                       "uuid": "0b04c1b3-b366-5145-9248-6cb118d3be99"
-                     }]
-        412:
-          description: Audio files directory or VAMP plugins directory is empty; could not generate requests
+              type: string
+          examples: [
+            "vamp-example-plugins:amplitudefollower:amplitude",
+            "vamp-example-plugins:percussiononsets:onsets"
+          ]
+  "/plugin/{vendor}/{name}/{output}":
+    get:
+      description: Returns details of given VAMP plugin
+      parameters:
+      - name: vendor
+        in: path
+        required: true
+        type: string
+      - name: name
+        in: path
+        required: true
+        type: string
+      - name: output
+        in: path
+        required: true
+        type: string
+      responses:
+        200:
+          description: Details of given VAMP plugin
+          schema:
+            "$ref": "#/definitions/VampPlugin"
+        400:
+          description: Vendor, name or output parameter were not given
+        404:
+          description: Plugin with given vendor, name or output dos not exist
   "/config/metric":
     get:
       description: Returns available metric configuration
