--- a/audiopyle/open_api_docs.yml
+++ b/audiopyle/open_api_docs.yml
@@ -251,3 +251,90 @@ paths:
           }
         404:
           description: There was no plugin config file found
+  "/request":
+    get:
+      description: Returns list of received extraction requests
+      responses:
+        200:
+          description: List of UUIDs (task IDs) from received requests
+          schema:
+            type: array
+            items:
+              type: string
+          examples: [
+            "0b04c1b3-b366-5145-9248-6cb118d3be99",
+            "27f0ccab-349c-51f7-9acc-37e8ade111dc"
+          ]
+  "/request/{task_id}":
+    get:
+      description: Returns details of extraction request selected by UUID (task ID)
+      parameters:
+      - name: task_id
+        in: path
+        required: true
+        type: string
+      responses:
+        200:
+          description: Details of extraction request
+          schema:
+            type: object
+            properties:
+              task_id:
+                type: string
+              id3_tag:
+                "$ref": "#/definitions/AudioTag"
+              plugin:
+                "$ref": "#/definitions/Plugin"
+              plugin_config:
+                "$ref": "#/definitions/PluginConfig"
+              audio_meta:
+                "$ref": "#/definitions/FileDetail"
+          examples: {
+            "audio_meta": {
+              "bit_rate_kbps":371.7,
+              "channels_count":1,
+              "file_name":"102bpm_drum_loop.flac",
+              "file_size_bytes":111690,
+              "length_sec":2.378,
+              "sample_rate":44100},
+            "id3_tag": {
+              "album":"Unknown Album",
+              "artist":"Unknown Artist",
+              "date":2017,
+              "genre":"Unknown Genre",
+              "title":"Unknown Title",
+              "track":1},
+            "plugin": {
+              "library_file_name":"vamp-example-plugins.so",
+              "name":"spectralcentroid",
+              "output":"logcentroid",
+              "vendor":"vamp-example-plugins"},
+            "plugin_config": {
+              "block_size":null,
+              "params":{},
+              "step_size":null},
+            "task_id":"0b04c1b3-b366-5145-9248-6cb118d3be99"
+          }
+        400:
+          description: There was no task_id parameter provided in URL
+        404:
+          description: There is no extraction request with task_id (UUID) provided in URL
+  "/request/automation":
+    post:
+      description: Creates Cartesian product of requests from list of audio files and available (non-blacklisted) VAMP plugins and sends them for execution
+      responses:
+        202:
+          description: Returns details of generated requests
+          schema:
+            type: array
+            items:
+              "$ref": "#/definitions/ExtractionRequest"
+          examples: [{
+                       "audio_file_name": "102bpm_drum_loop.flac",
+                       "metric_config": null,
+                       "plugin_config": null,
+                       "plugin_full_key": "vamp-example-plugins:spectralcentroid:logcentroid",
+                       "uuid": "0b04c1b3-b366-5145-9248-6cb118d3be99"
+                     }]
+        412:
+          description: Audio files directory or VAMP plugins directory is empty; could not generate requests
