--- a/scripts/docker-compose-ci.yml
+++ b/scripts/docker-compose-ci.yml
@@ -49,6 +49,17 @@ services:
       - RABBITMQ_SERIVCE_HOST=rabbitmq.local
       - MYSQL_SERVICE_HOST=mysql.local
       - MYSQL_SERVICE_PORT=3306
+  ui:
+    networks:
+      default:
+        aliases:
+        - ui.local
+    image: "emkor/audiopyle-ui:latest"
+    hostname: "api"
+    ports:
+      - "8008:8008"
+    depends_on:
+      - api
   worker:
     networks:
       default:
